# miniqc

./: .gitignore  CHANGELOG.rst  Dockerfile  LICENSE.txt  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: docker.yml  hatch.yml
.maint/: local_gitignore
changelog.d/: 20230319_143528_effigies_docker.rst  20230618_155723_effigies_check_individual_files.rst  20230618_162534_effigies_alpine.rst  20230618_201200_effigies_consolidate.rst
miniqc/: __about__.py  __init__.py  __main__.py  nifti.py  types.py
tests/: conftest.py  test_miniqc.py  test_nifti.py
tests/data/bids_dataset/: dataset_description.json
